# rust-api-sample

./: .env  .env.example  Cargo.toml  README.md
deployment/: .dockerignore  .terraform.lock.hcl  Dockerfile  README.md  cloudbuild.yaml.tftpl  docker-compose.yml  main.tf  outputs.tf  setup.sh  terraform.tfstate  terraform.tfstate.backup  terraform.tfvars  terraform.tfvars.example  variables.tf
sql/: itens.sql  seed.sql
src/: main.rs  swagger-ui.html
